--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud">
+    <img class="top-cloud" src="Images/cloud.png" alt="cloud">
     <div class="title-text">
       <h1>I'm Maggie.</h1>
       <h2>a <span class="A">A</span>nalyst.</h2>
     </div>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
+    <img class="bottom-cloud" src="Images/cloud.png" alt="cloud">
     <img class="mountain" src="images/mountain.png" alt="mountain-img">
   </div>
 
@@ -35,7 +35,7 @@
 
       </div>
       <div class="skill-row">
-        <img class="chilli-img" src="images/study.png" alt="studying-img">
+        <img class="chilli-img" src="Images/study.png" alt="studying-img">
 
         <h3>Learn new Skills</h3>
         <p>But my best skill is to learn new skills.</p>
