--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="Images/cloud.png" alt="cloud">
+    <img class="top-cloud" src="cloud.png" alt="cloud">
     <div class="title-text">
       <h1>I'm Maggie.</h1>
       <h2>a <span class="A">A</span>nalyst.</h2>
