--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <h1>I'm Maggie.</h1>
       <h2>a <span class="A">A</span>nalyst.</h2>
     </div>
-    <img class="bottom-cloud" src="Images/cloud.png" alt="cloud">
-    <img class="mountain" src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud">
+    <img class="mountain" src="mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images/maggie.png" alt="maggies-profile-img">
+      <img src="maggie.png" alt="maggies-profile-img">
       <h2>Hello.</h2>
       <p class="intro">I am a Data Analyst. I'm on the process of learning Code. I ❤️ Learning and bake my own cakes.</p>
     </div>
@@ -35,7 +35,7 @@
 
       </div>
       <div class="skill-row">
-        <img class="chilli-img" src="Images/study.png" alt="studying-img">
+        <img class="chilli-img" src="study.png" alt="studying-img">
 
         <h3>Learn new Skills</h3>
         <p>But my best skill is to learn new skills.</p>
