--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img class="code-img" src="https://media.giphy.com/media/JWuBH9rCO2uZuHBFpm/giphy.gif" alt="data-img">
 
         <h3>Data Analyst</h3>
-        <p>I started working at Steelcase in 2014, for the CIDB department, working with the custemr Database.</p>
+        <p>I started working at Steelcase in 2014, for the CIDB department, working with the customer Database.</p>
 
       </div>
       <div class="skill-row">
